# lably

./: .gitignore  AGENTS.md  README.md  pyproject.toml
lably/: __main__.py  setup.py
lably/core/: i18n.py  meta.py  printer.py
lably/ui/: __init__.py  base_window.py
po/: LINGUAS  POTFILES.in
