# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lably"
version = "0.0.1"
description = "A GUI to print labels on a Label printer"
readme = "README.md"
authors = [{ name = "Bram Oosterlynck", email = "bram.oosterlynck@gmail.com" }]
license = "GPL-3.0-only"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dymo-bluetooth>=0.1.3",
  "python-barcode>=0.16.1"
]

[project.optional-dependencies]
gtk4 = [
  "PyGObject>=3.42.0"
]

[project.urls]
Homepage = "https://github.com/boosterl/lably"

[project.scripts]
lably = "lably.__main__:main"

[tool.setuptools.packages.find]
include = ["lably*"]

[tool.setuptools.package-data]
lably = [
  "locale/*/LC_MESSAGES/*.mo",
  "data/icons/hicolor/scalable/apps/*.svg",
]
